# openpad

./: .gitignore  Cargo.toml  LICENSE  README.md
adapters/: claude.toml  codex.toml  kimi.toml
crates/openpad-core/: Cargo.toml
crates/openpad-core/src/: adapter.rs  keymap.rs  led.rs  lib.rs  state.rs
crates/openpad-daemon/: Cargo.toml
crates/openpad-daemon/src/: config.rs  doctor.rs  hooks.rs  ingest.rs  input.rs  lib.rs  main.rs  runloop.rs  service.rs
crates/openpad-daemon/tests/: doctor_probe.rs  engine.rs  ingest.rs
crates/openpad-dispatch/: Cargo.toml
crates/openpad-dispatch/src/: lib.rs
crates/openpad-hid/: Cargo.toml
crates/openpad-hid/examples/: probe-keymap.rs  probe.rs
crates/openpad-hid/src/: lib.rs
docs/: verification.md
docs/superpowers/plans/: 2026-07-20-openpad-core-daemon.md  2026-07-20-openpad-ui.md
docs/superpowers/specs/: 2026-07-20-openpad-design.md
layouts/: README.md  kb16-via.json
shims/: claude-hook.sh  codex-notify.sh
