[package]
name = "openpad-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openpad"
path = "src/main.rs"

[dependencies]
openpad-core = { path = "../openpad-core" }
tiny_http = "0.12"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
ureq = "2"
