[package]
name = "openpad-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openpad"
path = "src/main.rs"

[dependencies]
openpad-core = { path = "../openpad-core" }
openpad-dispatch = { path = "../openpad-dispatch" }
openpad-hid = { path = "../openpad-hid" }
hidapi = "2"
tiny_http = "0.12"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rdev = { version = "0.5", features = ["unstable_grab"] }

[dev-dependencies]
ureq = "2"
openpad-daemon = { path = ".", features = ["test-fixtures"] }

[features]
test-fixtures = []
